<resources>
    <string name="app_name">Kalepa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_username">Username</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_title">Android Studio</string>
    <!-- Settings -->
    <string name="settings_button1">Configuración del perfil</string>
    <string name="settings_button2">FAQ</string>
    <string name="settings_button3">Atención al cliente</string>
    <string name="settings_button4">Términos y condiciones</string>
    <string name="settings_button5">Política de privacidad</string>
    <string name="settings_layout1">Soporte</string>
    <string name="settings_layout2">Legal</string>
    <!-- User -->
    <string name="user_name_opinion">Username</string>
    <string name="user_stars">⭐⭐⭐⭐⭐</string>
    <string name="user_sales">Número de compras/ventas</string>
    <string name="user_address">Ubicación</string>
    <string name="user_tab1">Productos en venta</string>
    <string name="user_tab2">Opiniones</string>


    <!-- Miguel -->
    <string name="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua.
    </string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
        labore et dolore magna aliqua.
    </string>
    <string name="subir_articulo">SUBIR ARTICULO</string>
    <string name="registro">REGISTRO</string>
    <string name="product_price">444</string>
    <string name="product_title">Título del producto</string>
    <string name="product_date">6/3/19</string>
    <string name="product_user_link">Usuario user_1234</string>
    <string name="euro_symbol">€</string>
    <string name="product_uploaded">Publicado el:</string>
    <string name="private_profile_notification_title">TÍTULO DE LA NOTIFICACIÓN</string>
    <string name="private_profile_notifiction_description">Descripción</string>
    <string name="b_product_bid_until">01/01/2001</string>
    <string name="b_product_bid_highest_message">Puja más alta</string>
    <string name="b_product_bid_until_message">Fecha límite</string>
    <string name="b_product_bid_button">PUJAR</string>
    <string name="b_product_buy_button">COMPRAR</string>
    <string name="b_product_trade_button">PROPONER INTERCAMBIO</string>
    <string name="b_product_trade_available">Disponible para intercambio</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="opinion_of">Opinión de:</string>
    <string name="dinero_extra">¿Dinero extra?</string>


    <string-array name="reasons">
        <item>Producto vendido</item>
        <item>Mucho tiempo sin encontrar comprador</item>
        <item>Subido por error</item>
        <item>Otros</item>
    </string-array>

    <string-array name="payments">
        <item>3  dias - 2€</item>
        <item>7  dias - 4€</item>
        <item>14 dias - 7€</item>
        <item>30 dias - 12€</item>
    </string-array>

    <string-array name="ordenar_por">
        <item>Defecto</item>
        <item>Menos kms de distancia</item>
        <item>Más kms de distancia</item>
        <item>Precio de menor a mayor</item>
        <item>Precio de mayor a menor</item>
        <item>Mejor valorados</item>
        <item>Nombre de la A a la Z</item>
        <item>Nombre de la Z a la A</item>
    </string-array>

    <string-array name="subastas">
        <item>Subasta</item>
        <item>Venta</item>
    </string-array>
    <string name="title_activity_self_profile">SelfProfileActivity</string>
    <string name="title_data">Datos Personales</string>
    <string name="title_products">Productos Subidos</string>
    <string name="title_notifications">Notificaciones</string>
</resources>