<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:id="@+id/n_settings_container"
        android:layout_marginTop="?attr/actionBarSize"
        tools:context=".MainActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="@string/settings_button1"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_margin="@dimen/activity_vertical_margin"
            />
        </LinearLayout>
        <LinearLayout
                android:id="@+id/n_settings_header"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/settings_layout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_layout1" android:textSize="18sp" android:textStyle="bold"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"
            />
            <Button
                    android:text="@string/settings_button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button6"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
            <Button
                    android:text="@string/settings_button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button7"
                    android:layout_margin="@dimen/activity_vertical_margin"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/settings_layout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/settings_layout2" android:textSize="18sp" android:textStyle="bold"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginStart="@dimen/activity_vertical_margin"/>
            <Button
                    android:text="@string/settings_button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
            <Button
                    android:text="@string/settings_button5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    android:layout_margin="@dimen/activity_vertical_margin"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:text="ELIMINAR CUENTA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#ff0000"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/n_settings_delete_user"
                    android:layout_marginLeft="@dimen/activity_vertical_margin"
                    android:layout_marginRight="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>